Minister updates for GER and IRE

--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -12851,6 +12851,8 @@
 	 Otto_Wels_dead:0 " is incapable of holding this post."
 	 GER_Franz_Bluecher_hog_mli:0 "Franz Blücher"
 	 Franz_Bluecher_dead:0 " is incapable of holding this post."
+	 GER_Paul_von_Lettow_Vorbeck_hog_mli:0 "Paul von Lettow Vorbeck"
+	 Paul_von_Lettow_Vorbeck_dead:0 " is incapable of holding this post."
 	 GER_Walther_von_Rathenau_hog_mli:0 "Walther von Rathenau"
 	 Walther_von_Rathenau_dead:0 " is incapable of holding this post."
 	 GER_Wilhelm_Kuelz_hog_mli:0 "Wilhelm Külz"
@@ -12867,8 +12869,6 @@
 	 Kuno_von_Westarp_dead:0 " is incapable of holding this post."
 	 GER_Ludwig_Kaas_hog_sco:0 "Ludwig Kaas"
 	 Ludwig_Kaas_dead:0 " is incapable of holding this post."
-	 GER_Paul_von_Lettow_Vorbeck_hog_sco:0 "Paul von Lettow Vorbeck"
-	 Paul_von_Lettow_Vorbeck_dead:0 " is incapable of holding this post."
 	 GER_Albert_Dufour_Feronce_hog_ade:0 "Albert Dufour Feronce"
 	 Albert_Dufour_Feronce_dead:0 " is incapable of holding this post."
 	 GER_Alfred_von_Tirpitz_hog_ade:0 "Alfred von Tirpitz"
@@ -12883,8 +12883,6 @@
 	 Heinrich_Bruening_dead:0 " is incapable of holding this post."
 	 GER_Johann_Schwerin_von_Krosigk_hog_ade:0 "Johann Schwerin von Krosigk"
 	 Johann_Schwerin_von_Krosigk_dead:0 " is incapable of holding this post."
-	 GER_Kurt_von_Schleicher_hog_ade:0 "Kurt von Schleicher"
-	 Kurt_von_Schleicher_dead:0 " is incapable of holding this post."
 	 GER_Manfred_Freiherr_von_Richthofen_hog_ade:0 "Manfred Freiherr von Richthofen"
 	 Manfred_Freiherr_von_Richthofen_dead:0 " is incapable of holding this post."
 	 GER_Otto_Meissner_hog_ade:0 "Otto Meissner"
@@ -12893,6 +12891,8 @@
 	 Ulrich_von_Hassel_dead:0 " is incapable of holding this post."
 	 GER_August_Von_Mackensen_hog_pau:0 "August Von Mackensen"
 	 August_Von_Mackensen_dead:0 " is incapable of holding this post."
+	 GER_Kurt_von_Schleicher_hog_pau:0 "Kurt von Schleicher"
+	 Kurt_von_Schleicher_dead:0 " is incapable of holding this post."
 	 GER_Erich_von_Ludendorff_hog_npo:0 "Erich von Ludendorff"
 	 Erich_von_Ludendorff_dead:0 " is incapable of holding this post."
 	 GER_Franz_Xaver_Ritter_von_Epp_hog_npo:0 "Franz Xaver Ritter von Epp"
@@ -13119,8 +13119,6 @@
 	 Josef_Wirmer_dead:0 " is incapable of holding this post."
 	 GER_Karl_Sack_sec_ade:0 "Karl Sack"
 	 Karl_Sack_dead:0 " is incapable of holding this post."
-	 GER_Kurt_von_Schleicher_sec_ade:0 "Kurt von Schleicher"
-	 Kurt_von_Schleicher_dead:0 " is incapable of holding this post."
 	 GER_Rudolf_Diels_sec_ade:0 "Rudolf Diels"
 	 Rudolf_Diels_dead:0 " is incapable of holding this post."
 	 GER_Walter_Schellenberg_sec_ade:0 "Walter Schellenberg"
@@ -13137,6 +13135,8 @@
 	 Hans_Frank_dead:0 " is incapable of holding this post."
 	 GER_Hans_Juergen_von_Blumenthal_sec_pau:0 "Hans Jürgen von Blumenthal"
 	 Hans_Juergen_von_Blumenthal_dead:0 " is incapable of holding this post."
+	 GER_Kurt_von_Schleicher_sec_pau:0 "Kurt von Schleicher"
+	 Kurt_von_Schleicher_dead:0 " is incapable of holding this post."
 	 GER_Stephanie_von_Hohenlohe_sec_pau:0 "Stephanie von Hohenlohe"
 	 Stephanie_von_Hohenlohe_dead:0 " is incapable of holding this post."
 	 GER_Artur_Mahraun_sec_npo:0 "Artur Mahraun"
@@ -13235,12 +13235,12 @@
 	 Hans_Speidel_dead:0 " is incapable of holding this post."
 	 GER_Josef_Kammhuber_mhc_mli:0 "Josef Kammhuber"
 	 Josef_Kammhuber_dead:0 " is incapable of holding this post."
+	 GER_Paul_von_Lettow_Vorbeck_mhc_mli:0 "Paul von Lettow Vorbeck"
+	 Paul_von_Lettow_Vorbeck_dead:0 " is incapable of holding this post."
 	 GER_Hans_Speidel_mhc_sco:0 "Hans Speidel"
 	 Hans_Speidel_dead:0 " is incapable of holding this post."
 	 GER_Oskar_Hansen_mhc_sco:0 "Oskar Hansen"
 	 Oskar_Hansen_dead:0 " is incapable of holding this post."
-	 GER_Paul_von_Lettow_Vorbeck_mhc_sco:0 "Paul von Lettow Vorbeck"
-	 Paul_von_Lettow_Vorbeck_dead:0 " is incapable of holding this post."
 	 GER_Adolf_Heusinger_mhc_ade:0 "Adolf Heusinger"
 	 Adolf_Heusinger_dead:0 " is incapable of holding this post."
 	 GER_Erich_von_Manstein_mhc_ade:0 "Erich von Manstein"
@@ -13287,10 +13287,10 @@
 	 Oskar_Hansen_dead:0 " is incapable of holding this post."
 	 GER_Karl_Heinrich_Luebke_carm_mli:0 "Karl Heinrich Lübke"
 	 Karl_Heinrich_Luebke_dead:0 " is incapable of holding this post."
+	 GER_Paul_von_Lettow_Vorbeck_carm_mli:0 "Paul von Lettow Vorbeck"
+	 Paul_von_Lettow_Vorbeck_dead:0 " is incapable of holding this post."
 	 GER_Hans_Speidel_carm_sco:0 "Hans Speidel"
 	 Hans_Speidel_dead:0 " is incapable of holding this post."
-	 GER_Paul_von_Lettow_Vorbeck_carm_sco:0 "Paul von Lettow Vorbeck"
-	 Paul_von_Lettow_Vorbeck_dead:0 " is incapable of holding this post."
 	 GER_Theodor_Blank_carm_sco:0 "Theodor Blank"
 	 Theodor_Blank_dead:0 " is incapable of holding this post."
 	 GER_Erwin_von_Witzleben_carm_ade:0 "Erwin von Witzleben"
@@ -15717,8 +15717,6 @@
 	 Eoin_O'Duffy_dead:0 " is incapable of holding this post."
 	 IRE_John_A_Costello_hog_sco:0 "John A. Costello"
 	 John_A_Costello_dead:0 " is incapable of holding this post."
-	 IRE_Patrick_Sweeney_hog_pau:0 "Patrick Sweeney"
-	 Patrick_Sweeney_dead:0 " is incapable of holding this post."
 	 IRE_Peadar_O'Donnell_hog_syn:0 "Peadar O'Donnell"
 	 Peadar_O'Donnell_dead:0 " is incapable of holding this post."
 	 IRE_Richard_Mulcahy_hog_ade:0 "Richard Mulcahy"
@@ -15727,6 +15725,8 @@
 	 Sean_Lemass_dead:0 " is incapable of holding this post."
 	 IRE_Thomas_Johnson_hog_sde:0 "Thomas Johnson"
 	 Thomas_Johnson_dead:0 " is incapable of holding this post."
+	 IRE_Tomas_O_Dochartaigh_hog_pau:0 "Tomás Ó Dochartaigh"
+	 Tomas_O_Dochartaigh_dead:0 " is incapable of holding this post."
 	 IRE_William_Norton_hog_sde:0 "William Norton"
 	 William_Norton_dead:0 " is incapable of holding this post."
 	 IRE_William_T_Cosgrave_hog_sco:0 "William T. Cosgrave"
@@ -15735,16 +15735,16 @@
 	### Foreign Minister ###
 	 IRE_Bill_Gannon_for_rso:0 "Bill Gannon"
 	 Bill_Gannon_dead:0 " is incapable of holding this post."
+	 IRE_Cathal_O_Muarchadha_for_sde:0 "Cathal Ó Muarchadha"
+	 Cathal_O_Muarchadha_dead:0 " is incapable of holding this post."
 	 IRE_Eamon_de_Valera_for_mli:0 "Eamon de Valera"
 	 Eamon_de_Valera_dead:0 " is incapable of holding this post."
 	 IRE_John_A_Costello_for_sco:0 "John A. Costello"
 	 John_A_Costello_dead:0 " is incapable of holding this post."
 	 IRE_Kevin_O'Higgins_for_ade:0 "Kevin O'Higgins"
 	 Kevin_O'Higgins_dead:0 " is incapable of holding this post."
-	 IRE_Liam_O'Monahan_for_sde:0 "Liam O'Monahan"
-	 Liam_O'Monahan_dead:0 " is incapable of holding this post."
-	 IRE_Michael_O'Rafferty_for_sde:0 "Michael O'Rafferty"
-	 Michael_O'Rafferty_dead:0 " is incapable of holding this post."
+	 IRE_Liam_Mellows_for_sde:0 "Liam Mellows"
+	 Liam_Mellows_dead:0 " is incapable of holding this post."
 	 IRE_Oliver_J_Flanagan_for_ade:0 "Oliver J. Flanagan"
 	 Oliver_J_Flanagan_dead:0 " is incapable of holding this post."
 	 IRE_Patrick_A_Mulcahy_for_mli:0 "Patrick A. Mulcahy"
@@ -15773,8 +15773,8 @@
 	 Ernest_Blythe_dead:0 " is incapable of holding this post."
 	 IRE_Frank_Aiken_eco_mli:0 "Frank Aiken"
 	 Frank_Aiken_dead:0 " is incapable of holding this post."
-	 IRE_Frank_McDermott_eco_sco:0 "Frank McDermott"
-	 Frank_McDermott_dead:0 " is incapable of holding this post."
+	 IRE_Frank_MacDermot_eco_sco:0 "Frank MacDermot"
+	 Frank_MacDermot_dead:0 " is incapable of holding this post."
 	 IRE_Jim_Larkin_jr_eco_syn:0 "Jim Larkin jr."
 	 Jim_Larkin_jr_dead:0 " is incapable of holding this post."
 	 IRE_John_A_Costello_eco_sco:0 "John A. Costello"
@@ -15791,6 +15791,8 @@
 	 Patrick_McGilligan_dead:0 " is incapable of holding this post."
 	 IRE_Richard_Mulcahy_eco_ade:0 "Richard Mulcahy"
 	 Richard_Mulcahy_dead:0 " is incapable of holding this post."
+	 IRE_Rory_O'Connor_eco_sde:0 "Rory O'Connor"
+	 Rory_O'Connor_dead:0 " is incapable of holding this post."
 	 IRE_Sean_Lemass_eco_mli:0 "Seán Lemass"
 	 Sean_Lemass_dead:0 " is incapable of holding this post."
 	 IRE_Sean_Lester_eco_sde:0 "Sean Lester"
@@ -15805,8 +15807,6 @@
 	 Sean_T_O'Ceallaigh_dead:0 " is incapable of holding this post."
 	 IRE_Sighle_Humphreys_eco_rso:0 "Sighle Humphreys"
 	 Sighle_Humphreys_dead:0 " is incapable of holding this post."
-	 IRE_William_Gallacher_eco_sde:0 "William Gallacher"
-	 William_Gallacher_dead:0 " is incapable of holding this post."
 	 IRE_William_Norton_eco_sde:0 "William Norton"
 	 William_Norton_dead:0 " is incapable of holding this post."
 
@@ -15831,16 +15831,16 @@
 	 George_Gilmore_dead:0 " is incapable of holding this post."
 	 IRE_Gerald_Boland_sec_mli:0 "Gerald Boland"
 	 Gerald_Boland_dead:0 " is incapable of holding this post."
-	 IRE_Jack_Thomas_sec_sde:0 "Jack Thomas"
-	 Jack_Thomas_dead:0 " is incapable of holding this post."
 	 IRE_James_Geoghegan_sec_mli:0 "James Geoghegan"
 	 James_Geoghegan_dead:0 " is incapable of holding this post."
 	 IRE_John_W_Dulanty_sec_sco:0 "John W. Dulanty"
 	 John_W_Dulanty_dead:0 " is incapable of holding this post."
 	 IRE_Kevin_Dixon_sec_sde:0 "Kevin Dixon"
 	 Kevin_Dixon_dead:0 " is incapable of holding this post."
-	 IRE_Kevin_Haugh_sec_sco:0 "Kevin Haugh"
-	 Kevin_Haugh_dead:0 " is incapable of holding this post."
+	 IRE_James_Dillon_sec_sco:0 "James Dillon"
+	 James_Dillon_dead:0 " is incapable of holding this post."
+	 IRE_Liam_Mellows_sec_sde:0 "Liam Mellows"
+	 Liam_Mellows_dead:0 " is incapable of holding this post."
 	 IRE_Ludwig_Bieler_sec_sco:0 "Ludwig Bieler"
 	 Ludwig_Bieler_dead:0 " is incapable of holding this post."
 	 IRE_Sean_MacEoin_sec_ade:0 "Sean MacEoin"
@@ -15855,8 +15855,6 @@
 	 Dan_McKenna_dead:0 " is incapable of holding this post."
 	 IRE_Denis_McCullough_int_sco:0 "Denis McCullough"
 	 Denis_McCullough_dead:0 " is incapable of holding this post."
-	 IRE_Donal_Brackley_int_pau:0 "Donal Brackley"
-	 Donal_Brackley_dead:0 " is incapable of holding this post."
 	 IRE_Frank_Aiken_int_mli:0 "Frank Aiken"
 	 Frank_Aiken_dead:0 " is incapable of holding this post."
 	 IRE_Gerald_Boland_int_mli:0 "Gerald Boland"
@@ -15875,40 +15873,42 @@
 	 Oscar_Traynor_dead:0 " is incapable of holding this post."
 	 IRE_Padraig_O'Connor_int_sde:0 "Padraig O'Connor"
 	 Padraig_O'Connor_dead:0 " is incapable of holding this post."
-	 IRE_Patrick_Sweeney_int_pau:0 "Patrick Sweeney"
-	 Patrick_Sweeney_dead:0 " is incapable of holding this post."
 	 IRE_Sean_MacEoin_int_ade:0 "Sean MacEoin"
 	 Sean_MacEoin_dead:0 " is incapable of holding this post."
 	 IRE_Sean_Murray_int_syn:0 "Sean Murray"
 	 Sean_Murray_dead:0 " is incapable of holding this post."
+	 IRE_Thomas_F_O'Higgins_int_pau:0 "Thomas F. O'Higgins"
+	 Thomas_F_O'Higgins_dead:0 " is incapable of holding this post."
+	 IRE_Tomas_O_Dochartaigh_int_pau:0 "Tomás Ó Dochartaigh"
+	 Tomas_O_Dochartaigh_dead:0 " is incapable of holding this post."
 
 	### Military High Command ###
-	 IRE_Conor_Maguire_mhc_mli:0 "Conor Maguire"
-	 Conor_Maguire_dead:0 " is incapable of holding this post."
 	 IRE_Dan_Bryan_mhc_mli:0 "Dan Bryan"
 	 Dan_Bryan_dead:0 " is incapable of holding this post."
 	 IRE_Dan_McKenna_mhc_mli:0 "Dan McKenna"
 	 Dan_McKenna_dead:0 " is incapable of holding this post."
-	 IRE_Frank_Lynch_mhc_rso:0 "Frank Lynch"
-	 Frank_Lynch_dead:0 " is incapable of holding this post."
+	 IRE_Ernie_O'Malley_mhc_rso:0 "Ernie O'Malley"
+	 Ernie_O'Malley_dead:0 " is incapable of holding this post."
 	 IRE_Liam_Archer_mhc_sco:0 "Liam Archer"
 	 Liam_Archer_dead:0 " is incapable of holding this post."
 	 IRE_Liam_Lynch_mhc_sde:0 "Liam Lynch"
 	 Liam_Lynch_dead:0 " is incapable of holding this post."
+	 IRE_Liam_Tobin_mhc_mli:0 "Liam Tobin"
+	 Liam_Tobin_dead:0 " is incapable of holding this post."
 	 IRE_Maurice_Twomey_mhc_syn:0 "Maurice Twomey"
 	 Maurice_Twomey_dead:0 " is incapable of holding this post."
 	 IRE_Michael_Brennan_mhc_sco:0 "Michael Brennan"
 	 Michael_Brennan_dead:0 " is incapable of holding this post."
 	 IRE_Michael_J_Costello_mhc_mli:0 "Michael J. Costello"
 	 Michael_J_Costello_dead:0 " is incapable of holding this post."
-	 IRE_Norman_Devlin_mhc_sde:0 "Norman Devlin"
-	 Norman_Devlin_dead:0 " is incapable of holding this post."
+	 IRE_Nora_Connolly_mhc_syn:0 "Nora Connolly"
+	 Nora_Connolly_dead:0 " is incapable of holding this post."
 	 IRE_Oscar_Traynor_mhc_mli:0 "Oscar Traynor"
 	 Oscar_Traynor_dead:0 " is incapable of holding this post."
-	 IRE_Padraig_O'Connor_mhc_syn:0 "Padraig O'Connor"
-	 Padraig_O'Connor_dead:0 " is incapable of holding this post."
 	 IRE_Richard_Mulcahy_mhc_ade:0 "Richard Mulcahy"
 	 Richard_Mulcahy_dead:0 " is incapable of holding this post."
+	 IRE_Rory_O'Connor_mhc_sde:0 "Rory O'Connor"
+	 Rory_O'Connor_dead:0 " is incapable of holding this post."
 	 IRE_Sean_O'Grady_mhc_mli:0 "Seán O'Grady"
 	 Sean_O'Grady_dead:0 " is incapable of holding this post."
 
@@ -15917,8 +15917,8 @@
 	 Cecil_Lavery_dead:0 " is incapable of holding this post."
 	 IRE_Donal_Buckley_carm_mli:0 "Donal Buckley"
 	 Donal_Buckley_dead:0 " is incapable of holding this post."
-	 IRE_Emmett_Dalton_carm_sco:0 "Emmett Dalton"
-	 Emmett_Dalton_dead:0 " is incapable of holding this post."
+	 IRE_Emmet_Dalton_carm_sco:0 "Emmet Dalton"
+	 Emmet_Dalton_dead:0 " is incapable of holding this post."
 	 IRE_Eoin_O'Duffy_carm_pau:0 "Eoin O'Duffy"
 	 Eoin_O'Duffy_dead:0 " is incapable of holding this post."
 	 IRE_Frank_Fahy_carm_mli:0 "Frank Fahy"
@@ -15939,20 +15939,20 @@
 	### Chief of Navy ###
 	 IRE_AHJ_Jerome_cnav_mli:0 "A.H.J. Jerome"
 	 AHJ_Jerome_dead:0 " is incapable of holding this post."
-	 IRE_AT_Lawlor_cnav_sde:0 "A.T. Lawlor"
-	 AT_Lawlor_dead:0 " is incapable of holding this post."
+	 IRE_Anthony_T_Lawlor_cnav_sde:0 "Anthony T. Lawlor"
+	 Anthony_T_Lawlor_dead:0 " is incapable of holding this post."
 	 IRE_Andy_Barr_cnav_rso:0 "Andy Barr"
 	 Andy_Barr_dead:0 " is incapable of holding this post."
-	 IRE_Eamonn_Broy_cnav_pau:0 "Eamonn Broy"
-	 Eamonn_Broy_dead:0 " is incapable of holding this post."
+	 IRE_Eamon_Broy_cnav_pau:0 "Eamon Broy"
+	 Eamon_Broy_dead:0 " is incapable of holding this post."
 	 IRE_HT_Green_cnav_sco:0 "H.T. Green"
 	 HT_Green_dead:0 " is incapable of holding this post."
 	 IRE_John_O'Byrne_cnav_sco:0 "John O'Byrne"
 	 John_O'Byrne_dead:0 " is incapable of holding this post."
 	 IRE_Robert_E_Childers_cnav_sde:0 "Robert E. Childers"
 	 Robert_E_Childers_dead:0 " is incapable of holding this post."
-	 IRE_S_O'Muiris_cnav_sde:0 "S. O'Muiris"
-	 S_O'Muiris_dead:0 " is incapable of holding this post."
+	 IRE_Seamus_O'Muiris_cnav_sde:0 "Seamus O'Muiris"
+	 Seamus_O'Muiris_dead:0 " is incapable of holding this post."
 	 IRE_Sean_MacEntee_cnav_mli:0 "Seán MacEntee"
 	 Sean_MacEntee_dead:0 " is incapable of holding this post."
 	 IRE_Sean_T_O'Ceallaigh_cnav_mli:0 "Seán T. O'Ceallaigh"
@@ -15977,14 +15977,14 @@
 	 Michael_J_Costello_dead:0 " is incapable of holding this post."
 	 IRE_Oscar_Traynor_cair_mli:0 "Oscar Traynor"
 	 Oscar_Traynor_dead:0 " is incapable of holding this post."
-	 IRE_P_Quinn_cair_sco:0 "P. Quinn"
-	 P_Quinn_dead:0 " is incapable of holding this post."
 	 IRE_Patrick_A_Mulcahy_cair_mli:0 "Patrick A. Mulcahy"
 	 Patrick_A_Mulcahy_dead:0 " is incapable of holding this post."
-	 IRE_Pieras_Beaslai_cair_ade:0 "Pieras Beaslai"
-	 Pieras_Beaslai_dead:0 " is incapable of holding this post."
-	 IRE_W_Delamere_cair_mli:0 "W. Delamere"
-	 W_Delamere_dead:0 " is incapable of holding this post."
+	 IRE_Piaras_Beaslai_cair_ade:0 "Piaras Beaslaí"
+	 Piaras_Beaslai_dead:0 " is incapable of holding this post."
+	 IRE_William_Delamere_cair_mli:0 "William Delamere"
+	 William_Delamere_dead:0 " is incapable of holding this post."
+	 IRE_William_P_Quinn_cair_sco:0 "William P. Quinn"
+	 William_P_Quinn_dead:0 " is incapable of holding this post."
 
   ################################################################################################################################################################################################
   ### IRQ
