--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -11,6 +11,7 @@ FNG_Fortress_Manchuria_i:0 "Fortress Manchuria"
 FNG_The_National_Reclamation_War:0 "The National Reclamation War"
 FNG_Backward_Industry:0 "Backward Industry"
 FNG_Unscrupulous_Governance:0 "Unscrupulous Governance"
+FNG_Investment_Dearth:0 "Investment Dearth"
 
 ### Informal Empire Mechanic ###
 FNG_informal_empire_1:0 "Expel the Japanese Bandits!"
@@ -85,9 +86,9 @@ FNG_Mantetsu_Collaboration_desc:0 "Mantetsu, also known as the 'South Manchuria 
 FNG_Yamato_Hotel_Licenses:0 "Yamato Hotel Licenses"
 FNG_Yamato_Hotel_Licenses_desc:0 "One of Mantetsu's most successful ventures in Manchuria is its Yamato Hotel franchise, which serves the countless Japanese businessmen who make their way to and from the Home Islands every day. Despite the unwelcome influence they bear, their skills and capital are crucial."
 FNG_The_Soy_Agricultural_Initiative:0 "The Soy Agricultural Initiative"
-FNG_The_Soy_Agricultural_Initiative_desc:0 "Fengtian's significant Korean minority are are skilled rice planters, but soybeans are an extremely desirable cash crop, as they provide not only an excellent source of food, fertilizer, and animal feed, but also soy oil with industrial applications. Mantetsu undertook an effort to educate Koreans in Soy farming, but the response has been mixed. They now want our help to push this through."
+FNG_The_Soy_Agricultural_Initiative_desc:0 "Fengtian's significant Korean minority are skilled rice planters, but soybeans have become an extremely desirable cash crop, as they provide not only an excellent source of food, fertilizer, and animal feed, but also soy oil with industrial applications. Mantetsu undertook an effort to educate Koreans in Soy farming, but the response has been mixed. They now want our help to push this through."
 FNG_Japanese_Electrical_Expertise:0 "Japanese Electrical Expertise"
-FNG_Japanese_Electrical_Expertise_desc:0 "Thanks to China's backwardness over the past century, and the chaos of the past two decades, China and Fengtian have few native engineers. Japanese assistance will be essential in bringing modernity to Manchuria."
+FNG_Japanese_Electrical_Expertise_desc:0 "Thanks to China's backwardness over the past century, and the chaos of the past two decades, the country has few native engineers. Japanese assistance will be essential in bringing modernity to Manchuria."
 FNG_Mantetsu_Research_Wing:0 "Mantetsu Research Wing"
 FNG_Mantetsu_Research_Wing_desc:0 "Mantetsu's Research Wing, known as 'Mantetsu Chosabu', serves as the centrepiece of Japan's colonial program, and pursues a wide variety of scientific goals. Its massive funding and talent pool could be of great use to us in our own efforts."
 FNG_Mantetsu_Civil_Engineering_Projects:0 "Mantetsu Civil Engineering Projects"
@@ -116,7 +117,7 @@ FNG_Yingkou_Commercial_Development:0 "Yingkou Commercial Development"
 FNG_Yingkou_Commercial_Development_desc:0 "The port city of Yingkou serves as Fengtian's primary gateway to the world, and the second largest port on the Bohai Gulf after Japanese-controlled Dalian. The tremendous increase in material production in Fengtian demands an equally large investment in commercial infrastructure."
 #Develop the Four Provinces Section#
 FNG_Develop_the_Four_Provinces:0 "Develop the Four Provinces"
-FNG_Develop_the_Four_Provinces_desc:0 "The Four Provinces of Manchuria, Heilongjiang, Jilin, Liaoning, and Inner Manchuria, already contain over 30% of China's railroads and feature relatively widespread heavy industry, but if Fengtian is to move into the future these will have to be expanded upon and improved. Ideally this will be acheived solely by the Chinese people, but reality dictates that the Japanese will clear much of the path forward, and at a price."
+FNG_Develop_the_Four_Provinces_desc:0 "The Four Provinces of Manchuria, Heilongjiang, Jilin, Liaoning, and Inner Manchuria, already contain over 30% of China's railroads and feature relatively widespread heavy industry, but if Fengtian is to move into the future these will have to be expanded upon and improved. Ideally this would be acheived solely by the Chinese people, but reality dictates that the Japanese will lead much of the path forward."
 FNG_Reorganize_the_NTC:0 "Reorganise the NTC"
 FNG_Reorganize_the_NTC_desc:0 "Founded by the Fengtian Government shortly after its creation, the National Transportation Committee serves as a planning board for infrastructure construction across the country. The Japanese allege that its foremost aim is to disrupt Mantetsu's operations, and there may be at least some truth to this claim."
 FNG_The_Jilin-Hailong_Line:0 "The Jilin Hailong Line"
