Chinese unit name generation updated to new template as implemented by @SSBN-1239 Mikus#3279

--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -2135,11 +2135,11 @@ UNIT_GENERIC_NAME_JAP:0 "Dai $NR$ $NAME$"
 
 #CHINESE
 
-UNIT_GENERIC_NAME_QIE:0 "Di $NR$ $NAME$"
-UNIT_GENERIC_NAME_SQI:0 "Di $NR$ $NAME$"
-UNIT_GENERIC_NAME_XSM:0 "Di $NR$ $NAME$"
-UNIT_GENERIC_NAME_YUN:0 "Di $NR$ $NAME$"
-UNIT_GENERIC_NAME_FNG:0 "Di $NR$ $NAME$"
+UNIT_GENERIC_NAME_QIE:0 "$NAME$ Di $NR$ Shi"
+UNIT_GENERIC_NAME_SQI:0 "$NAME$ Di $NR$ Shi"
+UNIT_GENERIC_NAME_XSM:0 "$NAME$ Di $NR$ Shi"
+UNIT_GENERIC_NAME_YUN:0 "$NAME$ Di $NR$ Shi"
+UNIT_GENERIC_NAME_FNG:0 "$NAME$ Di $NR$ Shi"
 
 #RUSSIAN
 
