new loc names for PRF, MAD, MYS, TRV

--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1590,6 +1590,19 @@ LYB_ITA_subject_ADJ:0 "Libyan"
 TUN_subject:0 "$OVERLORDADJ$ Tunisia"
 TUN_subject_DEF:0 "$OVERLORDADJ$ Tunisia"
 
+MAD_PRF_subject:0 "Madras State"
+MAD_PRF_subject_DEF:0 "Madras State"
+MAD_PRF_subject_ADJ:0 "Madras"
+
+MYS_PRF_subject:0 "Mysore State"
+MYS_PRF_subject_DEF:0 "Mysore State"
+MYS_PRF_subject_ADJ:0 "Mysorean"
+
+TRV_PRF_subject:0 "Travancore-Cochin"
+TRV_PRF_subject_DEF:0 "Travancore-Cochin"
+TRV_PRF_subject_ADJ:0 "Travancorean"
+
+
 ##############
 #Vanilla
 ##############
