--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -3215,32 +3215,32 @@ PRC_totalist_DEF:0 "The United Communes of China"
 PRF_authoritarian_democrat:0 "Princely Federation"
 PRF_authoritarian_democrat_ADJ:0 "Princely"
 PRF_authoritarian_democrat_DEF:0 "The Princely Federation"
-PRF_market_liberal:0 "Hyderabad Federation"
-PRF_market_liberal_ADJ:0 "Hyderabadian"
-PRF_market_liberal_DEF:0 "The Hyderabad Federation"
-PRF_national_populist:0 "Indian Empire"
-PRF_national_populist_ADJ:0 "Imperial"
-PRF_national_populist_DEF:0 "The Indian Empire"
+PRF_market_liberal:0 "Deccan Federation"
+PRF_market_liberal_ADJ:0 "Deccan"
+PRF_market_liberal_DEF:0 "The Deccan Federation"
+PRF_national_populist:0 "Deccan Empire"
+PRF_national_populist_ADJ:0 "Deccan"
+PRF_national_populist_DEF:0 "The Deccan Empire"
 PRF_paternal_autocrat:0 "Princely Federation"
 PRF_paternal_autocrat_ADJ:0 "Princely"
 PRF_paternal_autocrat_DEF:0 "The Princely Federation"
 PRF_radical_socialist:0 "Hyderabad Commune"
-PRF_radical_socialist_ADJ:0 "Hyderabadian"
+PRF_radical_socialist_ADJ:0 "Hyderabadi"
 PRF_radical_socialist_DEF:0 "The Hyderabad Commune"
 PRF_social_conservative:0 "Hyderabad"
-PRF_social_conservative_ADJ:0 "Hyderabadian"
+PRF_social_conservative_ADJ:0 "Hyderabadi"
 PRF_social_conservative_DEF:0 "Hyderabad"
 PRF_social_democrat:0 "Hyderabad"
-PRF_social_democrat_ADJ:0 "Hyderabadian"
+PRF_social_democrat_ADJ:0 "Hyderabadi"
 PRF_social_democrat_DEF:0 "Hyderabad"
-PRF_social_liberal:0 "Hyderabad Federation"
-PRF_social_liberal_ADJ:0 "Hyderabadian"
-PRF_social_liberal_DEF:0 "The Hyderabad Federation"
+PRF_social_liberal:0 "Deccan Federation"
+PRF_social_liberal_ADJ:0 "Deccan"
+PRF_social_liberal_DEF:0 "The Deccan Federation"
 PRF_syndicalist:0 "Hyderabad Commune"
-PRF_syndicalist_ADJ:0 "Hyderabadian"
+PRF_syndicalist_ADJ:0 "Hyderabadi"
 PRF_syndicalist_DEF:0 "The Hyderabad Commune"
 PRF_totalist:0 "Hyderabad Commune"
-PRF_totalist_ADJ:0 "Hyderabadian"
+PRF_totalist_ADJ:0 "Hyderabadi"
 PRF_totalist_DEF:0 "The Hyderabad Commune"
 
 PRI_authoritarian_democrat:0 "Puerto Rico"
@@ -4942,33 +4942,33 @@ KEN_totalist_DEF:0 "Kenya"
 MAD_authoritarian_democrat:0 "Tamil Nadu"
 MAD_authoritarian_democrat_ADJ:0 "Tamil"
 MAD_authoritarian_democrat_DEF:0 "Tamil Nadu"
-MAD_market_liberal:0 "Tamil Nadu"
-MAD_market_liberal_ADJ:0 "Tamil"
-MAD_market_liberal_DEF:0 "Tamil Nadu"
+MAD_market_liberal:0 "Madras Republic"
+MAD_market_liberal_ADJ:0 "Madras"
+MAD_market_liberal_DEF:0 "the Madras Republic"
 MAD_national_populist:0 "Tamil Nadu"
 MAD_national_populist_ADJ:0 "Tamil"
 MAD_national_populist_DEF:0 "Tamil Nadu"
 MAD_paternal_autocrat:0 "Tamil Nadu"
 MAD_paternal_autocrat_ADJ:0 "Tamil"
 MAD_paternal_autocrat_DEF:0 "Tamil Nadu"
-MAD_radical_socialist:0 "Tamil Nadu"
+MAD_radical_socialist:0 "Tamil Commune"
 MAD_radical_socialist_ADJ:0 "Tamil"
-MAD_radical_socialist_DEF:0 "Tamil Nadu"
+MAD_radical_socialist_DEF:0 "the Tamil Commune"
 MAD_social_conservative:0 "Tamil Nadu"
 MAD_social_conservative_ADJ:0 "Tamil"
 MAD_social_conservative_DEF:0 "Tamil Nadu"
 MAD_social_democrat:0 "Tamil Nadu"
 MAD_social_democrat_ADJ:0 "Tamil"
 MAD_social_democrat_DEF:0 "Tamil Nadu"
-MAD_social_liberal:0 "Tamil Nadu"
+MAD_social_liberal:0 "Tamil Republic"
 MAD_social_liberal_ADJ:0 "Tamil"
-MAD_social_liberal_DEF:0 "Tamil Nadu"
-MAD_syndicalist:0 "Tamil Nadu"
+MAD_social_liberal_DEF:0 "the Tamil Republic"
+MAD_syndicalist:0 "Tamil Commune"
 MAD_syndicalist_ADJ:0 "Tamil"
-MAD_syndicalist_DEF:0 "Tamil Nadu"
-MAD_totalist:0 "Tamil Nadu"
+MAD_syndicalist_DEF:0 "the Tamil Commune"
+MAD_totalist:0 "Tamil Commune"
 MAD_totalist_ADJ:0 "Tamil"
-MAD_totalist_DEF:0 "Tamil Nadu"
+MAD_totalist_DEF:0 "the Tamil Commune"
 
 MAG_authoritarian_democrat:0 "Freistaat Madagaskar"
 MAG_authoritarian_democrat_ADJ:0 "Madagaskan"
@@ -6780,18 +6780,18 @@ MNS_totalist:0 "Mon Commune"
 MNS_totalist_ADJ:0 "Mon"
 MNS_totalist_DEF:0 "The Mon Commune"
 
-MYS_authoritarian_democrat:0 "Mysore"
+MYS_authoritarian_democrat:0 "Mysore State"
 MYS_authoritarian_democrat_ADJ:0 "Mysorean"
-MYS_authoritarian_democrat_DEF:0 "Mysore"
-MYS_market_liberal:0 "Mysore"
+MYS_authoritarian_democrat_DEF:0 "Mysore State"
+MYS_market_liberal:0 "Mysore Republic"
 MYS_market_liberal_ADJ:0 "Mysorean"
-MYS_market_liberal_DEF:0 "Mysore"
-MYS_national_populist:0 "Mysore"
+MYS_market_liberal_DEF:0 "The Mysore Republic"
+MYS_national_populist:0 "Mysore State"
 MYS_national_populist_ADJ:0 "Mysorean"
-MYS_national_populist_DEF:0 "Mysore"
-MYS_paternal_autocrat:0 "Mysore"
+MYS_national_populist_DEF:0 "Mysore State"
+MYS_paternal_autocrat:0 "Mysore State"
 MYS_paternal_autocrat_ADJ:0 "Mysorean"
-MYS_paternal_autocrat_DEF:0 "Mysore"
+MYS_paternal_autocrat_DEF:0 "Mysore State"
 MYS_radical_socialist:0 "Mysore Commune"
 MYS_radical_socialist_ADJ:0 "Mysorean"
 MYS_radical_socialist_DEF:0 "The Mysore Commune"
@@ -6801,9 +6801,9 @@ MYS_social_conservative_DEF:0 "Mysore"
 MYS_social_democrat:0 "Mysore"
 MYS_social_democrat_ADJ:0 "Mysorean"
 MYS_social_democrat_DEF:0 "Mysore"
-MYS_social_liberal:0 "Mysore"
+MYS_social_liberal:0 "Mysore Republic"
 MYS_social_liberal_ADJ:0 "Mysorean"
-MYS_social_liberal_DEF:0 "Mysore"
+MYS_social_liberal_DEF:0 "The Mysore Republic"
 MYS_syndicalist:0 "Mysore Commune"
 MYS_syndicalist_ADJ:0 "Mysorean"
 MYS_syndicalist_DEF:0 "The Mysore Commune"
@@ -6811,18 +6811,18 @@ MYS_totalist:0 "Mysore Commune"
 MYS_totalist_ADJ:0 "Mysorean"
 MYS_totalist_DEF:0 "The Mysore Commune"
 
-TRV_authoritarian_democrat:0 "Travancore"
+TRV_authoritarian_democrat:0 "Travancore State"
 TRV_authoritarian_democrat_ADJ:0 "Travancorean"
-TRV_authoritarian_democrat_DEF:0 "Travancore"
-TRV_market_liberal:0 "Travancore"
+TRV_authoritarian_democrat_DEF:0 "Travancore State"
+TRV_market_liberal:0 "Travancore Republic"
 TRV_market_liberal_ADJ:0 "Travancorean"
-TRV_market_liberal_DEF:0 "Travancore"
-TRV_national_populist:0 "Travancore"
+TRV_market_liberal_DEF:0 "The Travancore Republic"
+TRV_national_populist:0 "Travancore State"
 TRV_national_populist_ADJ:0 "Travancorean"
-TRV_national_populist_DEF:0 "Travancore"
-TRV_paternal_autocrat:0 "Travancore"
+TRV_national_populist_DEF:0 "Travancore State"
+TRV_paternal_autocrat:0 "Travancore State"
 TRV_paternal_autocrat_ADJ:0 "Travancorean"
-TRV_paternal_autocrat_DEF:0 "Travancore"
+TRV_paternal_autocrat_DEF:0 "Travancore State"
 TRV_radical_socialist:0 "Travancore Commune"
 TRV_radical_socialist_ADJ:0 "Travancorean"
 TRV_radical_socialist_DEF:0 "The Travancore Commune"
@@ -6832,9 +6832,9 @@ TRV_social_conservative_DEF:0 "Travancore"
 TRV_social_democrat:0 "Travancore"
 TRV_social_democrat_ADJ:0 "Travancorean"
 TRV_social_democrat_DEF:0 "Travancore"
-TRV_social_liberal:0 "Travancore"
+TRV_social_liberal:0 "Travancore Republic"
 TRV_social_liberal_ADJ:0 "Travancorean"
-TRV_social_liberal_DEF:0 "Travancore"
+TRV_social_liberal_DEF:0 "The Travancore Republic"
 TRV_syndicalist:0 "Travancore Commune"
 TRV_syndicalist_ADJ:0 "Travancorean"
 TRV_syndicalist_DEF:0 "The Travancore Commune"
