--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -21781,7 +21781,7 @@
 	 Mustafa_Ismet_Pasa_dead:0 " is incapable of holding this post."
 	 OTT_Selahattin_Pasa_carm_ade:0 "Selahattin Paşa"
 	 Selahattin_Pasa_dead:0 " is incapable of holding this post."
-	 OTT_Harun_Rasid_Hintersatz_Pasa_carm_pau:0 "Harun Raşid Hintersatz Paşa"
+	 OTT_Harun_Rasid_Hintersatz_Pasa_carm_pau:0 "Harun Reşid Hintersatz Paşa"
 	 Harun_Rasid_Hintersatz_Pasa_dead:0 " is incapable of holding this post."
 	 OTT_Mehmed_Vehip_Pasa_carm_pau:0 "Mehmed Vehip Paşa"
 	 Mehmed_Vehip_Pasa_dead:0 " is incapable of holding this post."
@@ -21801,7 +21801,7 @@
 	 Irfan_Bey_dead:0 " is incapable of holding this post."
 	 OTT_Vecihi_Pasa_cair_sli:0 "Vecihi Paşa"
 	 Vecihi_Pasa_dead:0 " is incapable of holding this post."
-	 OTT_Ahmet_Ali_Pasa_cair_sco:0 "Ahmet Ali Paşa"
+	 OTT_Ahmet_Ali_Pasa_cair_sco:0 "Ahmed Ali Paşa"
 	 Ahmet_Ali_Pasa_dead:0 " is incapable of holding this post."
 	 OTT_Sakir_Fevzi_Pasa_cair_ade:0 "Şakir Fevzi Paşa"
 	 Sakir_Fevzi_Pasa_dead:0 " is incapable of holding this post."
