Chiles states reworked according to TBWs wishes, some SA focuses and events might be and are broken for the time being

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -871,3 +871,6 @@ STATE_868:0 "Kolhapur"
 STATE_869:0 "Ruanda"
 STATE_870:0 "Burundi"
 STATE_871:0 "Njassaland"
+STATE_872:0 "Arica"
+STATE_873:0 "Tarapacá"
+STATE_874:0 "Atacama"
