More Turkestan events! Finally we got the war going!

--- a/localisation/KR_Turkestan_l_english.yml
+++ b/localisation/KR_Turkestan_l_english.yml
@@ -10,3 +10,8 @@ turkestan.2.t:0 "Skirmishes on the frontier"
 turkestan.2.d:0 "There has been a small skirmish between one of our border patrols and Kazakh police.  Eight of our brave soldiers were killed, and many are saying that it is time to launch a war to avenge their deaths, and liberate the Muslims of the Orda from rule by apostates!"
 turkestan.2.a:0 "We must move into Kazakhstan!"
 turkestan.2.b:0 "The time is not yet right"
+
+turkestan.3.t:0 "Call for war"
+turkestan.3.d:0 "An influential congress of clerics has issued a stern denouncement of our government's policy of co-existence with Alash Orda to the north.  They have stated that it is time for us to fight and establish Islamic rule over the whole of Central Asia."
+turkestan.3.a:0 "We must move into Kazakhstan!"
+turkestan.3.b:0 "The time is not yet right"
