Turkestan Persia support events

--- a/localisation/KR_Turkestan_l_english.yml
+++ b/localisation/KR_Turkestan_l_english.yml
@@ -6,12 +6,23 @@ turkestan.1.d:0 "We are now at war with the infidels in Kazakhstan.  Should we s
 turkestan.1.a:0 "Call up the tribes!"
 turkestan.1.b:0 "Our armies are large enough already."
 
-turkestan.2.t:0 "Skirmishes on the frontier"
+turkestan.2.t:0 "Skirmishes on the Frontier"
 turkestan.2.d:0 "There has been a small skirmish between one of our border patrols and Kazakh police.  Eight of our brave soldiers were killed, and many are saying that it is time to launch a war to avenge their deaths, and liberate the Muslims of the Orda from rule by apostates!"
 turkestan.2.a:0 "We must move into Kazakhstan!"
-turkestan.2.b:0 "The time is not yet right"
+turkestan.2.b:0 "The time is not yet right."
 
-turkestan.3.t:0 "Call for war"
+turkestan.3.t:0 "Call for War"
 turkestan.3.d:0 "An influential congress of clerics has issued a stern denouncement of our government's policy of co-existence with Alash Orda to the north.  They have stated that it is time for us to fight and establish Islamic rule over the whole of Central Asia."
 turkestan.3.a:0 "We must move into Kazakhstan!"
-turkestan.3.b:0 "The time is not yet right"
+turkestan.3.b:0 "The time is not yet right."
+
+turkestan.4.t:0 "War in Central Asia!"
+turkestan.4.d:0 "Our two giant neighbours, Turkestan and Alash Orda, are at war.  If Turkestan wins, they could turn on Persia next.  Should we send aid across the Caspian Sea to the Kazakhs?"
+turkestan.4.a:0 "We must move into Kazakhstan!"
+turkestan.4.b:0 "Send aid, and intervene against Turkestan"
+turkestan.4.c:0 "Do nothing."
+
+turkestan.5.t:0 "Aid from Persia"
+turkestan.5.d.supplies:0 "The Persians send aid to help against the onslaught of the Turkmen."
+turkestan.5.d.war:0 "The Persians send aid to help against the onslaught of the Turkmen, and not only that, but joined the war effort against the barbarians. With the Persian's help, we will finally put an end to Turkic menace."
+turkestan.5.a:0 "Great!"
