Fengtian Focus tree changes, land reform events, and an idea added.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -451,6 +451,29 @@ fengtian.new.1.a:0 "Troubling"
 fengtian.new.2.t:0 "Communications Clique Leads Railroad Strikes"
 fengtian.new.2.d:0 "The Communications Clique, with its widespread influence in Chinese-owned Manchurian railroads like the CER, has resorted to encouraging union activity and strikes to compensate for its recent losses of influence in government. The Clique will likely only go so far, for risk of creating something it cannot control, but their methods have already been fairly successful in demonstrating their political and economic clout."
 fengtian.new.2.a:0 "Unfortunate but necessary"
+##Land Reform Events##
+fengtian.new.3.t:0 "Land Disputes in Heilongjiang"
+fengtian.new.3.d:0 "INSERT"
+fengtian.new.3.a:0 "Support the Xiangshen"
+fengtian.new.3.b:0 "Support Local Land Reform"
+fengtian.new.4.t:0 "Clamour for Further Land Reform"
+fengtian.new.4.d:0 "INSERT"
+fengtian.new.4.a:0 "Support the Xiangshen"
+fengtian.new.4.b:0 "Support Local Land Reform"
+fengtian.new.5.t:0 "Land Reform Reaches the Assembly"
+fengtian.new.5.d:0 "INSERT"
+fengtian.new.5.a:0 "Support the Xiangshen"
+fengtian.new.5.b:0 "Support Widespread Land Reform"
+#Land Reform Event Conclusions#
+fengtian.new.6.t:0 "Peasant Unrest Quelled"
+fengtian.new.6.d:0 "INSERT"
+fengtian.new.6.a:0 "This might have gone better"
+fengtian.new.7.t:0 "Widespread Peasant Unrest Quelled"
+fengtian.new.7.d:0 "INSERT"
+fengtian.new.7.a:0 "What a disaster!"
+fengtian.new.8.t:0 "Land Reform Complete"
+fengtian.new.8.d:0 "INSERT"
+fengtian.new.8.a:0 "The price of progress"
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward!"
