--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -12,7 +12,7 @@ FNG_The_National_Reclamation_War:0 "The National Reclamation War"
 FNG_Backward_Industry:0 "Backward Industry"
 FNG_Unscrupulous_Governance:0 "Unscrupulous Governance"
 FNG_Investment_Dearth:0 "Investment Dearth"
-
+FNG_Land_Reform_Underway:0 "Land Reform Underway"
 ### Informal Empire Mechanic ###
 FNG_informal_empire_1:0 "Expel the Japanese Bandits!"
 FNG_informal_empire_2:0 "Preservation of the Xinhai Order"
@@ -453,27 +453,27 @@ fengtian.new.2.d:0 "The Communications Clique, with its widespread influence in 
 fengtian.new.2.a:0 "Unfortunate but necessary"
 ##Land Reform Events##
 fengtian.new.3.t:0 "Land Disputes in Heilongjiang"
-fengtian.new.3.d:0 "INSERT"
+fengtian.new.3.d:0 "As a product of various socio-economic changes, such as the steady shift of seasonal workers from the agricultural north to industrial jobs in Fengtian Province, land disputes have begun to flare up at an alarming rate. Normally these matters would be handled by the local Xiangshen, landlords, retired officials, clan elders, and scholars who 'represent' peasants in meetings with county officials. On this occasion, however, a large collection of peasants have bypassed all local officials and are attempting to petition the government directly. Normally such a petition, unworthy of the central government's attention, would be brushed aside, but unfortunately the situation has attracted the attention of the Asahi Shimbun, a leftist Japanese newspaper. \n \n The local Xiangshen, believing this matter to be solely within their jurisdiction, request that they be allowed to settle the matter themselves, brushing aside accusations of favoritism and corruption by the peasants. On the one hand, throughout all of Chinese history the Central Government has never truly been able to exert influence over the Xiangshen, but on the other the peasants grow increasingly desperate, and the entire region is watching."
 fengtian.new.3.a:0 "Support the Xiangshen"
 fengtian.new.3.b:0 "Support Local Land Reform"
 fengtian.new.4.t:0 "Clamour for Further Land Reform"
-fengtian.new.4.d:0 "INSERT"
+fengtian.new.4.d:0 "Despite the government's efforts to resolve the land disputes in the north, the matter has again arisen, the farmers likely emboldened by their predecessors and the publicity they received. The situation is fairly similar, as the Xiangshen once again assert their authority, and the peasants demand increased control over their land and what happens on it. n\ n\ This petition, however, has double the signatures, and with the results of the last case fresh in their minds, other farmers begin to grumble."
 fengtian.new.4.a:0 "Support the Xiangshen"
 fengtian.new.4.b:0 "Support Local Land Reform"
 fengtian.new.5.t:0 "Land Reform Reaches the Assembly"
-fengtian.new.5.d:0 "INSERT"
+fengtian.new.5.d:0 "It is unusual for members of the Recovery League to stray far from their usual statements about southern reclamation, or from the scripts prepared for them by deep-pocketed 'friends', but some more liberal minded members of the Assembly have received a slough of peasant petitions regarding land reform, and have decided to champion their cause. They argue that if our republican government aims to truly embody the values of the Xinhai Revolution and to differentiate itself from the archaic Qing, it must satisfy the needs of the common people, and strip away the sort of feudalism that the Xiangshen represent. n\ n\ This group of vocal politicians remains a vocal minority amid an otherwise indifferent Assembly, and advisors warn that the Xiangshen as a whole are not to be trifled with, but this decision ultimately lies in the Marshal's hands."
 fengtian.new.5.a:0 "Support the Xiangshen"
 fengtian.new.5.b:0 "Support Widespread Land Reform"
 #Land Reform Event Conclusions#
 fengtian.new.6.t:0 "Peasant Unrest Quelled"
-fengtian.new.6.d:0 "INSERT"
-fengtian.new.6.a:0 "This might have gone better"
+fengtian.new.6.d:0 "Given a taste of land reform, but denied its full flavor, unsatisfied peasants rose up in several northern towns, only to be put down by local garrisons. To add to the sad and embarassing situation, the commander of a nearby Japanese brigade patrolling the Russian border decided to intervene, adding the impression that foreign influence was behind the crackdown, and that the central government is incapable of keeping order without outside assistance. n\ n\ This situation might have been handled better."
+fengtian.new.6.a:0 "Damnable peasants!"
 fengtian.new.7.t:0 "Widespread Peasant Unrest Quelled"
-fengtian.new.7.d:0 "INSERT"
+fengtian.new.7.d:0 ""Given a taste of land reform, but denied its full flavor, unsatisfied peasants rose up across the north towns, overwhelming local garrisons and posing a threat to to the regional command at Qihihar. Fortunately the lightly armed farmers were poorly organized, lacking any kind of leadership structure, and so upon the full deployment of the regional general's forces, the attackers were dispersed and many slaughtered. n\ n\ Unfortunately, however, the loose discipline of the troops turned mere securing of towns into a looting frenzy, which was soon joined by nearby Japanese troops who apparently felt themselves 'under threat'. Our soldiers have been disciplined, but the damage has been done, and it is difficult to understate the current ill-will held toward the central government. The Xiangshen, smugly assured of their correctness all along, are happy to wait before re-asserting their authority to let the pain and embarassment fully sink in."
 fengtian.new.7.a:0 "What a disaster!"
-fengtian.new.8.t:0 "Land Reform Complete"
-fengtian.new.8.d:0 "INSERT"
-fengtian.new.8.a:0 "The price of progress"
+fengtian.new.8.t:0 "Land Reform Underway"
+fengtian.new.8.d:0 "For better or worse, land reform is now underway at both the local and national levels, with officials superseding the local Xiangshen to assert the central government's sovereignty for the first time in hundreds of years. However, while they have used that time to thoroughly game the machine of local administration, they were also its designers and engineers, forcing officials to proverbially re-invent the wheel. While many are satisfied, the economy is certain to suffer considerably, and it is unclear just how far the reforms will be able to go."
+fengtian.new.8.a:0 "This is the price of progress"
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward!"
