Minor grammar fixes

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -557,7 +557,7 @@ unionstate.59.t:0 "The Cubans Have Complied"
 unionstate.59.d:0 "The Cubans have agreed to our request!"
 unionstate.59.a:0 "American control returns to Cuba"
 unionstate.60.t:0 "The Cubans Defies Us!"
-unionstate.60.d:0 "The Cubans have refused! What insolence to show the leaders of the Freest World!!"
+unionstate.60.d:0 "The Cubans have refused! What insolence to show the leaders of the Freest World!"
 unionstate.60.a:0 "This slight will not go unanswered"
 unionstate.60.b:0 "This hubris will be met with arms!"
 unionstate.61.t:0 "New flag for the Republic"
