--- a/localisation/KR_Brazil_l_english.yml
+++ b/localisation/KR_Brazil_l_english.yml
@@ -608,7 +608,7 @@ bra.201.a:0 "Yes, socialist countries should keep together."
 bra.201.b:0 "No, Bolivia and its people need isolation."
 bra.202.t:0 "Alliance between Brazil and Bolivia is formed"
 bra.202.d:0 "The Bolivian state expressed its intention to join our alliance. For the world revolution!"
-bra.202.a:0 "Welcome!!"
+bra.202.a:0 "Welcome!"
 bra.203.t:0 "Revolution in Bolivia!"
 bra.203.d:0 "A few months ago, the rightful government of the Republic of Bolivia has been overthrown by syndicalist bands! Already their president has sought asylum in La Plata. We must find a way to prevent this rebellion from spreading towards us. Our military leaders have suggested increasing our presence in the border areas."
 bra.203.a:0 "Raise new troops in the area."
