--- a/localisation/KR_Centroamerica_l_english.yml
+++ b/localisation/KR_Centroamerica_l_english.yml
@@ -104,7 +104,7 @@ centro.23.d:0 "France has accepted us into their faction, we are now part of the
 centro.23.a:0 "Hooray!"
 centro.24.t:0 "France refuses us into the Internationale"
 centro.24.d:0 "France has refused us into their faction, stating that they disagree with out methods..."
-centro.24.a:0 "Damn them!!"
+centro.24.a:0 "Damn them!"
 centro.25.t:0 "Honduran workers oppressed"
 centro.25.d:0 "The government of the United Provinces has is oppressing the farmers of Honduras by telling them what and where to grow their crops, this has caused a great uproar in Honduras and some left wing dissidents are asking for our aid."
 centro.25.a:0 "A great opportunity"
