--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -441,7 +441,7 @@ combinedsyndicates.5.a:0 "We must join arms with France"
 combinedsyndicates.5.b:0 "We must reorganise our own country"
 combinedsyndicates.6.t:0 "The CSA wants to join the Internationale"
 combinedsyndicates.6.d:0 "The Combined Syndicates of America expressed their intention to join our alliance. For the world revolution!"
-combinedsyndicates.6.a:0 "Welcome!!"
+combinedsyndicates.6.a:0 "Welcome!"
 combinedsyndicates.7.t:0 "Emigrants"
 combinedsyndicates.7.d:0 "Some of The elites and the upper class of the Great Lakes have left their homes and took their families across the border to Royalist Canada."
 combinedsyndicates.7.a:0 "Close the Ambassador Bridge and Patrol the Detroit River!"
