--- a/localisation/KR_Nationalist_France_l_english.yml
+++ b/localisation/KR_Nationalist_France_l_english.yml
@@ -558,7 +558,7 @@ nfa.92.d:0 "The Maquisards movement and its terrorist acclivities are greatly un
 nfa.92.a:0 "Demand Exiled government to cease all support"
 nfa.92.b:0 "We will attack the source of problems!"
 nfa.92.c:0 "They must solve it themselves"
-nfa.93.t:0 "Maquisards coup!!"
+nfa.93.t:0 "Maquisards coup!"
 nfa.93.d:0 "Large Maquisards groups have decided to step up its operations in order to gain total control over our state. They even managed to get part of our armed forces on their side and with their help Maquisards entered our capital. Fortunately large parts of our armed forces are still on our side. Will they succeed and save Occitania?"
 nfa.93.a:0 "Maquisards overthrows the government!"
 nfa.93.b:0 "Armed forces defeat the Maquisards!"
