--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -866,7 +866,7 @@ russia.1930.b:0 "The Constitution forbids such a thing!"
 
 russia.1933.t:0 "The second Russian Civil War!"
 russia.1933.d:0 "The godless Reds must be brought down once and for all! Our armies will be victorious again, just as we were twenty years ago!"
-russia.1933.a:0 "For God and the Motherland!!"
+russia.1933.a:0 "For God and the Motherland!"
 
 russia.1935.t:0 "Dual Power!"
 russia.1935.d:0 "The situation is grave, both our government and SOVNARKOM claim ultimate political authority in Russia. While there is no conflict at the moment it would only take a spark to plunge the country into disaster. Also, our peripheral territories are destabilised and our neighbours look on hungrily."
