--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -172,7 +172,7 @@ siam.16.t:0 "The Fall of Singapore"
 siam.16.d:0 "Singapore, the 'Gibraltar of the East,' has been seized by Royal [SIA.GetAdjective] forces despite having been considered an impregnable fortress by its former British owners and its new German overlords.\n\nThe [SIA.GetAdjective] Military Administration of Singapore has chosen the Fullerton Building as its headquarters, and the city has been renamed Singhanakhon, which roughly translates to 'Lion City' The Sarawat Taharn can be seen patrolling the streets en masse to hammer in the message that the [SIA.GetAdjective] are there to stay."
 siam.16.a:0 "That's unexpected"
 siam.16.b:0 "They're rightfully ours!"
-siam.16.c:0 "Mein gott!!!"
+siam.16.c:0 "Mein gott!"
 siam.17.t:0 "The Fall of Sydney"
 siam.17.d:0 "Further expanding on its conquests in the south, [SIA.GetNameDef] has seized Sydney in Australasia. Local defenders were forced to retreat across the Sydney Harbour Bridge to new positions on Observatory Hill, but attempts to demolish the bridge were thwarted by advancing [SIA.GetAdjective] forces.\n\nThe [SIA.GetAdjective] war flag can now be seen hanging from the Sydney Town Hall, which serves as the headquarters of the city's new military administration, and the Sarawat Taharn military police are maintaining a watchful eye on the streets."
 siam.17.a:0 "A significant development"
