--- a/localisation/KR_Sweden_Foreign_l_english.yml
+++ b/localisation/KR_Sweden_Foreign_l_english.yml
@@ -60,6 +60,6 @@ swe.213.t:0 "Germany to our aid!"
 swe.213.d:0 "Germany keeps their promise to us and joins the war! With German support, Sweden will be short-lived, for sure!"
 swe.213.a:0 "A Kaiser never breaks his word!"
 
-swe.214.t:0 "Germany abandons us!!"
+swe.214.t:0 "Germany abandons us!"
 swe.214.d:0 "Despite earlier promises of support, Germany has now decided to abandon us when war has come to our doorstep. Finland will stand alone against Sweden."
 swe.214.a:0 "Curse Germany!"
