--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -122,7 +122,7 @@ balticduchy.79.t:0 "Russia accepted our demands"
 balticduchy.79.d:0 "Russia accepted our demands and ceased all activity which was aimed against the territorial integrity of the United Baltic Duchy."
 balticduchy.79.a:0 "Another victory for our diplomacy"
 
-balticduchy.80.t:0 "SOP coup!!"
+balticduchy.80.t:0 "SOP coup!"
 balticduchy.80.d:0 "Our large nationalist SOP movement has decided to step up its operations in order to gain control over our state. They even managed to get part of our armed forces on their side and with their help the pro-Russian nationalists entered our capital. Fortunately large parts of our armed forces are still on our side. Will they succeed and save the United Baltic Duchy?"
 balticduchy.80.a:0 "Putschist overthrows the government!"
 balticduchy.80.b:0 "Armed forces defeat the nationalists!"
