--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -4944,7 +4944,7 @@ MAD_authoritarian_democrat_ADJ:0 "Tamil"
 MAD_authoritarian_democrat_DEF:0 "Tamil Nadu"
 MAD_market_liberal:0 "Madras Republic"
 MAD_market_liberal_ADJ:0 "Madras"
-MAD_market_liberal_DEF:0 "the Madras Republic"
+MAD_market_liberal_DEF:0 "The Madras Republic"
 MAD_national_populist:0 "Tamil Nadu"
 MAD_national_populist_ADJ:0 "Tamil"
 MAD_national_populist_DEF:0 "Tamil Nadu"
@@ -4953,7 +4953,7 @@ MAD_paternal_autocrat_ADJ:0 "Tamil"
 MAD_paternal_autocrat_DEF:0 "Tamil Nadu"
 MAD_radical_socialist:0 "Tamil Commune"
 MAD_radical_socialist_ADJ:0 "Tamil"
-MAD_radical_socialist_DEF:0 "the Tamil Commune"
+MAD_radical_socialist_DEF:0 "The Tamil Commune"
 MAD_social_conservative:0 "Tamil Nadu"
 MAD_social_conservative_ADJ:0 "Tamil"
 MAD_social_conservative_DEF:0 "Tamil Nadu"
@@ -4962,13 +4962,13 @@ MAD_social_democrat_ADJ:0 "Tamil"
 MAD_social_democrat_DEF:0 "Tamil Nadu"
 MAD_social_liberal:0 "Tamil Republic"
 MAD_social_liberal_ADJ:0 "Tamil"
-MAD_social_liberal_DEF:0 "the Tamil Republic"
+MAD_social_liberal_DEF:0 "The Tamil Republic"
 MAD_syndicalist:0 "Tamil Commune"
 MAD_syndicalist_ADJ:0 "Tamil"
-MAD_syndicalist_DEF:0 "the Tamil Commune"
+MAD_syndicalist_DEF:0 "The Tamil Commune"
 MAD_totalist:0 "Tamil Commune"
 MAD_totalist_ADJ:0 "Tamil"
-MAD_totalist_DEF:0 "the Tamil Commune"
+MAD_totalist_DEF:0 "The Tamil Commune"
 
 MAG_authoritarian_democrat:0 "Freistaat Madagaskar"
 MAG_authoritarian_democrat_ADJ:0 "Madagaskan"
