New rule to make checking easier, if it has KR in front, it has been changed more than spell checking

--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-
+#Need to check - Zankoas
 EQUIPMENT_DESIGNER_DESC:0 "Designed by: $DESIGNER|Y$"
 EQUIPMENT_ARMOR:0 "Armour"
 EQUIPMENT_MOTORIZED:0 "Motorised"
