--- a/localisation/production_l_english.yml
+++ b/localisation/production_l_english.yml
@@ -1,5 +1,4 @@
 ﻿l_english:
-
 PRODUCTION_PRODUCTION_LABEL:0 "Production"
 PRODUCTION_EQUIPMENTPOOL_LABEL:0 "Storage"
 PRODUCTION_EFFICIENCY_LABEL:0 "§TEfficiency§!"
@@ -36,7 +35,7 @@ PRODUCTION_DECREASE_PRIORITY_LABEL:0 "§GClick to §Hdecrease priority§!.\nShif
 PRODUCTION_PRIORITY_DELAYED:0 "A Production Line with higher priority will be given access to resources before Production Lines with a lower priority."
 PRODUCTION_EFFICIENCY:0 "£prod_eff  §TProduction Efficiency: $AMOUNT|H2%$§!"
 PRODUCTION_EFFICIENCY_MOD:0 "£prod_eff §TProduction Efficiency: $AMOUNT|Y2%$§!\n"
-PRODUCTION_EFFICIENCY_WITH_GAIN:0 "£prod_eff  §TProduction Efficiency: $AMOUNT|H2%$§! ($GAIN|H3%$ per week)"
+PRODUCTION_EFFICIENCY_WITH_GAIN:1 "£prod_eff  §TProduction Efficiency: $AMOUNT|H2%$§! ($GAIN|H3%$ per day)"
 PRODUCTION_EFFICIENCY_DESC:0 "§TAverage Factory Production Efficiency.\nProduction Efficiency Increases by $VALUE|H=2$%/unit produced split evenly on active Factories.§!"
 PRODUCTION_RESOURCE_PENALTY:0 "§TLack of resources: $AMOUNT|R2%$§!"
 PRODUCTION_ASSIGN_EQUIPMENT:0 "§TAssign Equipment to start production.§!"
