--- a/localisation/equip_air_l_english.yml
+++ b/localisation/equip_air_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-
+#Need to check - Zankoas
 fighter:0 "Fighter"
 fighter_equipment_desc:0 "Fighters are fast and nimble and can do many jobs. Everything from fighting for air superiority, protect your bombers and intercept the enemies bombers."
 cv_fighter:0 "Fighter"
